lavet http get fra lars api via chrome browser med udv. installeret

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="app" ng-controller="httpController as httpCtrl">
+<html ng-app="app" ng-controller="httpController">
     <head>
         <title>Start Page</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
@@ -9,6 +9,6 @@
     <body>
         <h1>Adventure Flights</h1>
         
-        <div>{{httpCtrl.flightsFromDate}}</div>
+        <div>{{flightsFromDate}}</div>
     </body>
 </html>
