Finished searchview html css design

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -100,18 +100,18 @@
 
             <div style="height: 500px; width: 1000px; background-color: #FFFFFF; margin-left: auto; margin-right: auto; margin-top: 20px">
 
-                <table cellspacing="0" cellpadding="0">
+                <table class="tableHome" cellspacing="0" cellpadding="0">
                     <tr style="height: 0;">
-                        <td><img src="imageshomepage/peoplepic.png" width="250"></td>
-                        <td style="width: 240px;"></td>
-                        <td><img src="imageshomepage/flightpic.png" width="250"></td>
-                        <td style="width: 250px;"></td>
+                        <td class="tdhome"><img src="imageshomepage/peoplepic.png" width="250"></td>
+                        <td class="tdhome" style="width: 240px;"></td>
+                        <td class="tdhome"><img src="imageshomepage/flightpic.png" width="250"></td>
+                        <td class="tdhome" style="width: 250px;"></td>
                     </tr>
                     <tr style="height: 0;">
-                        <td style="width: 250px;"></td>
-                        <td><img src="imageshomepage/vacpic.png" width="250"></td>
-                        <td></td>
-                        <td><img src="imageshomepage/woman.png" width="250" height="250"></td>
+                        <td class="tdhome" style="width: 250px;"></td>
+                        <td class="tdhome"><img src="imageshomepage/vacpic.png" width="250"></td>
+                        <td class="tdhome"></td>
+                        <td class="tdhome"><img src="imageshomepage/woman.png" width="250" height="250"></td>
                     </tr>
                 </table>
 
