--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,7 @@
         <link href="stylesheet.css" rel="stylesheet" type="text/css"/>
         <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i" rel="stylesheet">
-
+        <link href="searchview/stylesheet.css" rel="stylesheet" type="text/css"/>
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,100,400,900,500" rel="stylesheet">
     </head>
     <body>
@@ -120,5 +120,25 @@
             <div class="section4">
                
             </div>
+        <div class="subfooter" style="margin-top: 0px;">
+            <img src="imageshomepage/subfooter.png" height="500">
+        </div>
+        <div class="footer">
+            <div>
+             <ul class="nav">
+                <li>HOME</li>
+                <li>ABOUT US</li>
+                <li>POPULAR DESTINATION</li>
+                <li>MY RESERVATION</li>
+                <li style="padding-right: 0px; margin-right: 0px;">CONTACT US</li>
+            </ul>
+            </div>
+            <div class="text" style="margin-left: 83px; padding-top: 67px; width: 175px; float:left;">
+                © Designed by <div style="color: #FF7E00; float: right;">Adventure Flights</div>
+            </div>
+            <div class="text" style="float: left; margin-left: 700px; font-size: 10px;" >
+                Designed & Developed by eClick Softwares & Solutions Pvt. Ltd.
+            </div>
+        </div>
     </body>
 </html>
