Finished confirmation page and reserver page

--- a/src/main/webapp/searchview/searchview.html
+++ b/src/main/webapp/searchview/searchview.html
@@ -83,7 +83,7 @@ and open the template in the editor.
         <div class="subfooter">
             <img src="../imageshomepage/subfooter.png" height="500">
         </div>
-        <div class="footer" style="margin-top: 0px;">
+        <div class="footer">
             <div>
              <ul class="nav">
                 <li>HOME</li>
