--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -5,7 +5,7 @@
                 <div style="float:right; padding-top: 7px; padding-left: 8px">123 456 7890</div>
             </div>
             <div class="logo">
-                <img src="imageshomepage/logo fra photo.png">
+                <a href="#/"><img src="imageshomepage/logo fra photo.png"></a>
             </div>
             <ul class="nav">
                 <li>HOME</li>
