Passenger layout correction, angular works on searchview

--- a/src/main/webapp/passengerview/passengerview.html
+++ b/src/main/webapp/passengerview/passengerview.html
@@ -1,4 +1,4 @@
-<div style="height: 500px; width: 1000px; background-color: #FFFFFF; margin-left: auto; margin-right: auto; margin-top: 20px">
+<div style="height: auto; padding-bottom: 50px; width: 100%; background-color: #FFFFFF; margin-left: auto; margin-right: auto; margin-top: 20px">
 
     <div style="height: 109px; background-color: #181818;">
         <div style="float: left">
@@ -21,7 +21,7 @@
 
         </div>
     </div>
-    <div>
+    <div class="divindiv" style="background-color: white;" >
         <div style="float: left; margin-left: 102px; margin-top: 35px; background-color: #F8F8F8; padding-bottom: 35px; padding-right: 20px;">
             <div style="font-family: 'Lato', sans-serif; margin-left: 25px; margin-right: 25px; padding-top: 25px; padding-bottom: 30px; border-bottom: 1px dotted; border-bottom-color: #898787; font-weight: 900; color: #E80000; text-transform: uppercase;">
                 Reservee info
@@ -52,30 +52,30 @@
                 Flight info
             </div>
 
-            <table style="padding-top: 10px;">
+            <table style="padding-top: 10px; background-color: white; border-color: white;">
                 <tr class="textForm">
-                    <td style="width: 200px;">flight no</td>
-                    <td style="font-weight: bold;">{{info}}</td>
+                    <td style="width: 200px; border-top-color: white;">flight no</td>
+                    <td style="font-weight: bold; border-top-color: white;">{{info}}</td>
                 </tr>
                 <tr class="textForm">
-                    <td>origin</td>
-                    <td style="font-weight: bold;">{{info}}</td>
+                    <td style="border-top-color: white;">origin</td>
+                    <td style="font-weight: bold;border-top-color: white;">{{info}}</td>
                 </tr>
                 <tr class="textForm">
-                    <td>destination</td>
-                    <td style="font-weight: bold;">{{info}}</td>
+                    <td style="border-top-color: white;">destination</td>
+                    <td style="font-weight: bold; border-top-color: white;">{{info}}</td>
                 </tr>
                 <tr class="textForm">
-                    <td>date</td>
-                    <td style="font-weight: bold;">{{info}}</td>
+                    <td style="border-top-color: white;">date</td>
+                    <td style="font-weight: bold; border-top-color: white;">{{info}}</td>
                 </tr>
                 <tr class="textForm">
-                    <td>flight time</td>
-                    <td style="font-weight: bold;">{{info}}</td>
+                    <td style="border-top-color: white;">flight time</td>
+                    <td style="font-weight: bold; border-top-color: white;">{{info}}</td>
                 </tr>
                 <tr class="textForm">
-                    <td>number of seats</td>
-                    <td style="font-weight: bold;">{{info}}</td>
+                    <td style="border-top-color: white;" >number of seats</td>
+                    <td style="font-weight: bold; border-top-color: white;">{{info}}</td>
                 </tr>
             </table>
         </div>
