--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.9/angular-route.js"></script>
         <script src="javascript.js" type="text/javascript"></script>
         <script src="routing.js" type="text/javascript"></script>
-        
+        <link href="passengerview/passengerstyle.css" rel="stylesheet" type="text/css"/>
         <link href="searchview/stylesheet.css" rel="stylesheet" type="text/css"/>
         <link href="stylesheet.css" rel="stylesheet" type="text/css"/>
         <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
