--- a/src/main/webapp/passengerview/passengerview.html
+++ b/src/main/webapp/passengerview/passengerview.html
@@ -12,6 +12,7 @@
         <div class="text" style="margin-top: 22px; margin-left: 187px; float: left; font-weight: 400">Depart</div>
         <div class="text" style="margin-top: 22px; margin-left: 162px; float: left;  width: 250px; font-weight: 400">Number of Tickets</div>
 
+        <!--test-->
         <div style="margin-left: 50px; margin-top: 10px; float: left">
             <input class="inputfield" style="width: 190px; background-repeat: no-repeat; background-position: 90% 50%; background-image: url(../imageshomepage/locationicon.png); font-weight: 300" type="text" placeholder="Airport name">
             <input class="inputfield" style="margin-left: 26px; width: 190px; background-repeat: no-repeat; background-position: 90% 50%; background-image: url(../imageshomepage/locationicon.png); font-weight: 300" type="text" placeholder="Airport name">
