--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,8 +17,8 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,100,400,900,500" rel="stylesheet">
         
     </head>
-    <body ng-controller="httpController">
-        <h1>HEJ {{HEJHEJ}}</h1>
+    <body>
+       
         <div ng-view="">
 
         </div>
