search inputfields works, iataFactory

--- a/src/main/webapp/searchview/searchview.html
+++ b/src/main/webapp/searchview/searchview.html
@@ -40,7 +40,7 @@
 
 
     <div  style="background-color: #E80000; margin-top: 70px; margin-left:102px; margin-right: 102px; height: 60px;">
-        <div class="textSearch" style="padding-top: 20px;"> - destination airport | date | numberOfSeats </div>
+        <div class="textSearch" style="padding-top: 20px;"> {{departAirport}} - {{arrivalAirport}} | {{date}} | {{tickets}} </div>
     </div>
     <div style="padding-bottom: 50px;">
         <table cellspacing="0" cellpadding="0" style="margin-left: 102px; margin-top: 20px;">
