Atemped to fix ng-show issue

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -38,7 +38,7 @@
             <input class="inputfield" style="margin-left: 26px; width: 116px; background-repeat: no-repeat; background-position: 90% 50%; background-image: url(imageshomepage/locationicon.png); font-weight: 300" type="text" placeholder="Airport name">
             <input class="inputfield" style="margin-left: 26px; width: 75px; background-repeat: no-repeat; background-position: 90% 50%; background-image: url(imageshomepage/dateicon.png); font-weight: 300" type="text" placeholder="Select date" >
             <input class="inputfield" style="margin-left: 20px; width: 100px; font-weight: 300" type="number" placeholder="Select number">
-            <a href="#search" ng-click="setCurrentPath()"><input class="orangeButton" style="margin-left: 24px;" type="submit" value="SEARCH" ></a>
+            <a href="#search"><input class="orangeButton" style="margin-left: 24px;" type="submit" value="SEARCH" ng-model="testPath"></a>
 
 
         </div>
