--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,7 +18,7 @@
         
     </head>
     <body ng-controller="searchBarCntr">
-        <div ng-controller="searchCntr" ng-hide="currentPath === '/'"  style="height: 109px; background-color: #181818;">
+        <div ng-controller="searchCntr" ng-show="testPath === 'hvisnu'"  style="height: 109px; background-color: #181818;">
         <div style="float: left">
             <div style="margin-left: 100px; margin-top: 18px;">
                 <a href="#/"><img src="imageshomepage/logo fra photo.png" width="125"></a>
