overføre data mellem views - midlertidig løsning i controller

--- a/src/main/webapp/passengerview/passengerview.html
+++ b/src/main/webapp/passengerview/passengerview.html
@@ -1,7 +1,7 @@
 <div style="height: 109px; background-color: #181818;">
     <div style="float: left">
         <div style="margin-left: 100px; margin-top: 18px;">
-            <a href="#/"><img src="imageshomepage/logo fra photo.png" width="125"></a>
+            <a href="#/"><img ng-src="imageshomepage/logo fra photo.png" width="125"></a>
         </div>
     </div>
 
