--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,11 +17,11 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,100,400,900,500" rel="stylesheet">
 
     </head>
-    <body>
+    <body ng-controller="searchCntr">
 
         
 
-            <div ng-view="">
+            <div ng-view>
 
             </div>
 
@@ -29,7 +29,7 @@
 
             </div>
             <div class="subfooter" style="margin-top: 0px;">
-                <img src="imageshomepage/subfooter.png" height="500">
+                <img ng-src="imageshomepage/subfooter.png" height="500">
             </div>
             <div class="footer">
                 <div>
