--- a/src/main/webapp/searchview/searchview.html
+++ b/src/main/webapp/searchview/searchview.html
@@ -3,7 +3,7 @@
     <div style="height: 109px; background-color: #181818;">
         <div style="float: left">
             <div style="margin-left: 100px; margin-top: 18px;">
-                <a href="#/"><img src="imageshomepage/logo fra photo.png" width="125"></a>
+                <a href="#/"><img ng-src="imageshomepage/logo fra photo.png" width="125"></a>
             </div>
         </div>
 
@@ -77,5 +77,9 @@
 
 
         </table>
+    </div>
+    <div>
+        SCOPET.............:::::::{{airlineInfo.flights[0]}}
+        <input type="submit" ng-click="getScope()" value="scope">
     </div>
 </div>
