igang med factory

--- a/src/main/webapp/searchview/searchview.html
+++ b/src/main/webapp/searchview/searchview.html
@@ -81,5 +81,6 @@
     <div>
         SCOPET.............:::::::{{airlineInfo.flights[0]}}
         <input type="submit" ng-click="getScope()" value="scope">
+        TICKET::::{{answer}}
     </div>
 </div>
