Factory gemmer data, getFlight virker ikke endnu

--- a/src/main/webapp/searchview/searchview.html
+++ b/src/main/webapp/searchview/searchview.html
@@ -80,7 +80,8 @@
     </div>
     <div>
         SCOPET.............:::::::{{airlineInfo.flights[0]}}
-        <input type="submit" ng-click="getScope()" value="scope">
-        TICKET::::{{answer}}
+        <input type="submit" ng-click="getFlights()" value="scope">
+        <!--TICKET::::{{list}}-->
+        TICKET2::::{{tickets}}
     </div>
 </div>
