--- a/src/main/webapp/passengerview/passengerview.html
+++ b/src/main/webapp/passengerview/passengerview.html
@@ -40,12 +40,12 @@
             </div>
 
             <div class="textLato" style="color: #474747; font-family: 'Lato', sans-serif; margin-top: 40px; margin-left: 25px; font-size: 12px;">
-                <div style="float:left; height:31px; padding-top: 7px;">First name </div><div style="padding-left: 20px; float: left;"><input class='inputfieldPass' style="height: 25px; width: 200px;" type="text"></div>
-                <div style="margin-left: 30px; float:left; height:31px; padding-top: 7px;">Last name </div><div style="padding-left: 20px; float: left;"><input class='inputfieldPass' style="height: 25px; width: 200px;" type="text"></div>
+                <div style="float:left; height:31px; padding-top: 7px;">First name </div><div style="padding-left: 20px; float: left;"><input class='inputfieldPass' style="height: 25px; width: 200px;" type="text" ng-model="firstName"></div>
+                <div style="margin-left: 30px; float:left; height:31px; padding-top: 7px;">Last name </div><div style="padding-left: 20px; float: left;"><input class='inputfieldPass' style="height: 25px; width: 200px;" type="text" ng-model="lastName"></div>
             </div>
             <div class="textLato" style="color: #474747; font-family: 'Lato', sans-serif; margin-top: 100px; margin-left: 25px; font-size: 12px;">
-                <div style="float:left; height:31px; padding-top: 7px;">Email </div><div style="padding-left: 47px; float: left;"><input class='inputfieldPass' style="height: 25px; width: 200px;" type="text"></div>
-                <div style="margin-left: 30px; float:left; height:31px; padding-top: 7px;">Phone </div><div style="padding-left: 40px; float: left;"><input class='inputfieldPass' style="height: 25px; width: 200px;" type="text"></div>
+                <div style="float:left; height:31px; padding-top: 7px;">Email </div><div style="padding-left: 47px; float: left;"><input class='inputfieldPass' style="height: 25px; width: 200px;" type="text" ng-model="email"></div>
+                <div style="margin-left: 30px; float:left; height:31px; padding-top: 7px;">Phone </div><div style="padding-left: 40px; float: left;"><input class='inputfieldPass' style="height: 25px; width: 200px;" type="text" ng-model="phone"></div>
             </div>
             <div class="textLato" style="font-family: 'Lato', sans-serif; margin-left: 25px; margin-right: 25px; padding-top: 80px; padding-bottom: 30px; border-bottom: 1px dotted; border-bottom-color: #898787; font-weight: 900; color: #E80000; text-transform: uppercase;">
                 Passenger details
@@ -57,7 +57,7 @@
                 <div id="body-content" style="float: left; margin-left: 25px; width: 35px; padding: 7px; font-weight: 500;">{{1}}</div><div style="float: left;"><input style="width: 230px; height: 25px;" type="text"></div><div style="float:left; padding-left: 20px;"><input style="width: 230px; height: 25px;" type="text"></div>  
             </div>
             <div style="margin-left: 460px; padding-top: 20px;">
-                <a href="#confirm"><input class="orangeButton" type="submit" value="SAVE"></a></div>
+                <!--<a href="#confirm">--><input class="orangeButton" type="submit" value="SAVE" ng-click="addReserveInformation(firstName, lastName, email, phone)"><!--</a>--></div>
         </div>
 
         <div style="float: left; margin-left: 20px; margin-top: 35px;">
