--- a/src/main/webapp/searchview/searchview.html
+++ b/src/main/webapp/searchview/searchview.html
@@ -72,7 +72,7 @@
                 <td>{{info.date| date:'HH:mm':'UTC+0' | arivalFilter:info.traveltime}}</td>
                 <td>{{info.destination}}</td>
                 <td style="color: #E80000; font-size: 14px;">{{info.totalPrice| currency : "DKK"}}</td>
-                <td style="padding-left: 20px; padding-right: 20px;"><a href="#reserve" ng-click="getFlightInformation(airlineInfo.flights)"><button class="orangeButton" style="padding-left: 20px; padding-right: 20px;">RESERVATION</button></a></td>
+                <td style="padding-left: 20px; padding-right: 20px;"><a href="#reserve" ng-click="getFlightInformation(airlineInfo.flights[airlineInfo.flights.indexOf(info)])"><button class="orangeButton" style="padding-left: 20px; padding-right: 20px;">RESERVATION</button></a></td>
             </tr>
 
 
